test/fail/unknown-act.js
var seneca = require('../..')()

seneca.act({a: 1}, function (err) {
  console.log(err)
})
